--- a/life.css
+++ b/life.css
@@ -2,7 +2,7 @@
 body {
   display: flex;
   flex-direction: column;
-  min-height: 99.6vh;
+  min-height: 100vh;
   margin: 0px;
 }
 .contents {
@@ -85,13 +85,13 @@ footer {
 }
 .header_left, .footer_left {
   text-align: left;
-  margin-left: 8px;
+  margin-left: 9px;
   flex: 0 0 260px;
   order: -1;
 }
 .header_right, .footer_right {
   text-align: right;
-  margin-right: 8px;
+  margin-right: 9px;
   flex: 0 0 260px;
   order: 1;
 }
@@ -122,4 +122,19 @@ table.centre {
 a {
   color: #000000;
   text-decoration: underline;
+}
+
+/* Better vertical centering of title text and top buttons */
+.header_title {
+  height: 57px;
+  line-height: 20px;
+  text-align: center;
+}
+.header_left {
+  margin-top: 1px;
+  margin-bottom: 7px;
+}
+.header_right {
+  margin-top: 1px;
+  margin-bottom: 7px;
 }
