--- a/app/css/life.css
+++ b/app/css/life.css
@@ -153,9 +153,10 @@ a {
 #mirror_buttons .mirror_inactive {
   border: 2px solid #000000;
 }
-#button_random {
+#button_random, #button_central_rectangle {
   border:  2px solid #E0B0FF;
   outline: 2px solid #000000;
+  margin-top: 5px;
 }
 #mirror_buttons #mirror_ns {
   background-image: linear-gradient(bottom, #000000 50%, #E0B0FF 50%);
